# baabuljannah.com

./: .gitignore  LICENSE  README.md  build.sh  default.nix  frontend-exe  overlay.nix  release.nix  shell.nix
.obelisk/.obelisk/impl/: github.json
.obelisk/impl/: github.json
api-docs/: auth-service.md
backend/: ChangeLog.md  backend.cabal  backend.nix
backend/src/: Api.hs  Docs.hs  Main.hs  Swagger.hs  Types.hs
backend/src/Api/: User.hs
deploy/: logical.nix  physical.nix
dockers/: backend-exe.nix  blog-exe.nix
frontend/: .gitignore  README.md  cabal  cabal.project  default.nix  frontend.cabal  frontend.cabal.cp
frontend/exe/: main.hs
frontend/src/: Frontend.hs  Main.hs  ParseUtil.hs  Types.hs  UI.hs  UIUtils.hs  Web.hs  Widget.hs  main.hs
frontend/src/Types/: RouteWidget.hs
frontend/src/UI/: Base.hs  Storage.hs
frontend/src/Util/: Button.hs  Collection.hs
frontend/src/Util/Bulma/Components/: Navbar.hs
frontend/src/Web/: Aktivitas.hs  Footer.hs  Landing.hs  Media.hs  Navigation.hs  Tentang.hs
frontend/src/Web/Media/: Berita.hs  Publikasi.hs  SiaranPers.hs
frontend/src/Web/Tentang/: DKM.hs  Galeri.hs  LaporanTahunan.hs  Sejarah.hs  VisiMisi.hs
frontend/src/Widget/: About.hs  Contact.hs  Dashboard.hs  Landing.hs  Navigation.hs
nixdeps/: fetchNixpkgs.nix  nixpkgs.json  nixpkgs.nix  reflex-dom-nested-routing.json
nixdeps/backend-deps/: aeson-compat.json  aeson-compat.nix  aeson-pretty.json  aeson-pretty.nix  aeson.json  aeson.nix  base-compat.json  base-compat.nix  beam.json  beam.nix  cabal.json  cabal.nix  comonad.json  comonad.nix  distributive.json  distributive.nix  doctest.json  doctest.nix  entropy.json  entropy.nix  hashable.json  hashable.nix  hspec.json  hspec.nix  http-api-data.json  http-api-data.nix  http-types.json  http-types.nix  hunit.json  hunit.nix  insert-ordered-containers.json  insert-ordered-containers.nix  lens-aeson.json  lens-aeson.nix  lens.json  lens.nix  mmorph.json  mmorph.nix  network.json  network.nix  (+41 more)
nixdeps/frontend-deps/: reflex-platform.nix
static/css/: baabuljannah.min.css  style.min.css
