name:           backend
version:        0.0.1.0
description:    This is backend service written using Servant
homepage:       
bug-reports:    
author:         Andika D. Riyandi
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: 

executable webserver
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >=4.7 && <5
              , aeson
              , text
              , containers
              , bytestring
              , servant
              , servant-client
              , servant-snap
              , servant-blaze
              , servant-docs
              , servant-swagger
              , blaze-html
              , mtl
              , postgresql-simple
              , beam-core
              , beam-postgres
              , beam-migrate
              , websockets
              , jwt
              , warp
              , warp-tls
              , wai
              , time
              , optparse-generic
              , snap
              , snap-core
              , snap-server
              , cryptonite
              , network


  other-modules:
                Types
              , Models 
              , Api
              , Api.User
              , Api.Blog
              , Api.Accounting

  default-language: Haskell2010